--- a/libVRender/libVRender.vcxproj
+++ b/libVRender/libVRender.vcxproj
@@ -18,7 +18,6 @@
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='LibraryDebug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -31,7 +30,6 @@
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
-
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
@@ -43,19 +41,16 @@
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='LibraryRelease|x64'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  
   <PropertyGroup Label="UserMacros" />
-
   <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='LibraryDebug|x64'">
     <VcpkgUseStatic>true</VcpkgUseStatic>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='LibraryRelease|x64'" Label="Vcpkg">
     <VcpkgUseStatic>true</VcpkgUseStatic>
   </PropertyGroup>
-
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='LibraryDebug|x64'">
     <PreBuildEvent>
-      <Command>powershell -ExecutionPolicy Bypass -File $(SolutionDir)tools\ComputeTotalSHA1.ps1 > $(ProjectDir)generated_version.h</Command>
+      <Command>powershell -ExecutionPolicy Bypass -File $(SolutionDir)tools\ComputeTotalSHA1.ps1 &gt; $(ProjectDir)generated_version.h</Command>
     </PreBuildEvent>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -77,7 +72,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='LibraryRelease|x64'">
     <PreBuildEvent>
-      <Command>powershell -ExecutionPolicy Bypass -File $(SolutionDir)tools\ComputeTotalSHA1.ps1 > $(ProjectDir)generated_version.h</Command>
+      <Command>powershell -ExecutionPolicy Bypass -File $(SolutionDir)tools\ComputeTotalSHA1.ps1 &gt; $(ProjectDir)generated_version.h</Command>
     </PreBuildEvent>
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -107,7 +102,6 @@
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
-
   <ItemGroup>
     <None Include="README.md" />
     <None Include="shaders\ambient_occlusion.glsl" />
