--- a/libVRender/libVRender.vcxproj.filters
+++ b/libVRender/libVRender.vcxproj.filters
@@ -93,6 +93,9 @@
       <Filter>shaders</Filter>
     </None>
     <None Include="packages.config" />
+    <None Include="shaders\world_ui.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -235,5 +238,7 @@
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="glm.natvis" />
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natstepfilter" />
   </ItemGroup>
 </Project>
