--- a/Examples/HoloGUI/HoloExample.csproj
+++ b/Examples/HoloGUI/HoloExample.csproj
@@ -13,7 +13,7 @@
 
 	  <Platforms>x64</Platforms>
 
-	  <StartupObject>VRenderConsole.Program</StartupObject>
+	  <StartupObject>HoloExample.Program</StartupObject>
 
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
@@ -42,6 +42,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
