--- a/libVRender/libVRender.vcxproj.filters
+++ b/libVRender/libVRender.vcxproj.filters
@@ -99,6 +99,9 @@
     <None Include="shaders\wboit.glsl">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\fake_pbr.glslh">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
