--- a/Examples/HoloGUI/HoloExample.csproj
+++ b/Examples/HoloGUI/HoloExample.csproj
@@ -40,6 +40,7 @@
   </ItemGroup> 
 
   <ItemGroup>
+    <PackageReference Include="FFmpeg.AutoGen" Version="7.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
