--- a/libVRender/libVRender.vcxproj
+++ b/libVRender/libVRender.vcxproj
@@ -115,7 +115,7 @@
     <None Include="shaders\gen_shaders.bat" />
     <None Include="shaders\gltf.glsl" />
     <None Include="shaders\gltf_a.glsl" />
-    <None Include="shaders\ground_plane.glsl" />
+    <None Include="shaders\bg.glsl" />
     <None Include="shaders\ground_reflection.glsl" />
     <None Include="shaders\lines_bunch.glsl" />
     <None Include="shaders\point_cloud_simple.glsl" />
