--- a/Examples/HoloGUI/Properties/launchSettings.json
+++ b/Examples/HoloGUI/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Server": {
       "commandName": "Project",
-      "nativeDebugging": false
+      "nativeDebugging": true
     },
     "Client": {
       "commandName": "Project",
