--- a/Examples/Annotator/Annotator.csproj
+++ b/Examples/Annotator/Annotator.csproj
@@ -7,14 +7,11 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <ApplicationIcon>Resources\pencil.ico</ApplicationIcon>
+	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	  <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="TemplateParameters.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Resources\libVRender.dll" />
     <None Remove="Resources\pencil.ico" />
   </ItemGroup>
 
@@ -23,7 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- <EmbeddedResource Include="Resources\libVRender.dll" /> -->
     <EmbeddedResource Include="Resources\pencil.ico" />
   </ItemGroup>
 
@@ -32,17 +28,22 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="pythonnet" Version="3.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="pythonnet" Version="3.0.5" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.7" />
   </ItemGroup>
 
-	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
-		<Optimize>False</Optimize>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-		<OutputPath>$(SolutionDir)x64\LibraryDebug</OutputPath>
-	</PropertyGroup> 
   <ItemGroup>
     <ProjectReference Include="..\..\CycleGUI\CycleGUI.csproj" />
   </ItemGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+		<Optimize>False</Optimize>
+		<OutputPath>$(SolutionDir)x64\LibraryDebug</OutputPath>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+		<Optimize>True</Optimize>
+		<OutputPath>$(SolutionDir)x64\LibraryRelease</OutputPath>
+	</PropertyGroup>
 </Project>
