update. but holo might broken.

--- a/libVRender/libVRender.vcxproj.filters
+++ b/libVRender/libVRender.vcxproj.filters
@@ -102,6 +102,9 @@
     <None Include="shaders\fake_pbr.glslh">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\holo_renderer.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
