--- a/Examples/HoloGUI/Properties/launchSettings.json
+++ b/Examples/HoloGUI/Properties/launchSettings.json
@@ -8,6 +8,12 @@
       "commandName": "Project",
       "commandLineArgs": "c",
       "nativeDebugging": true
+    },
+    "Profile 1": {
+      "commandName": "Executable",
+      "executablePath": "D:\\work\\3d-display\\test-curve-display\\HoloExample.exe",
+      "workingDirectory": "D:\\work\\3d-display\\test-curve-display\\",
+      "nativeDebugging": true
     }
   }
 }
