--- a/libVRender/libVRender.vcxproj
+++ b/libVRender/libVRender.vcxproj
@@ -112,6 +112,7 @@
     <None Include="shaders\depth_blur.glsl" />
     <None Include="shaders\fake_pbr.glslh" />
     <None Include="shaders\grating_display.glsl" />
+    <None Include="shaders\holo_renderer.glsl" />
     <None Include="shaders\imgui.glsl" />
     <None Include="shaders\utilities.glsl" />
     <None Include="shaders\gen_shaders.bat" />
