--- a/Examples/Annotator/Annotator.csproj
+++ b/Examples/Annotator/Annotator.csproj
@@ -8,7 +8,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <ApplicationIcon>Resources\pencil.ico</ApplicationIcon>
 	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-	  <Platforms>AnyCPU;x64</Platforms>
+	  <Platforms>AnyCPU;x64;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
