--- a/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
+++ b/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
@@ -5,6 +5,11 @@
 	  <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+
+	  <Platforms>AnyCPU;x64</Platforms>
+
   </PropertyGroup>
 
 
