--- a/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
+++ b/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
@@ -32,6 +32,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Costura.Fody" Version="6.0.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Fody" Version="6.9.3">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
+		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
 		<PackageReference Include="System.Drawing.Common" Version="8.0.3" />
 		<PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
 		<ProjectReference Include="..\..\CycleGUI\CycleGUI.csproj" />
