--- a/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
+++ b/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
@@ -25,6 +25,7 @@
 
 	<ItemGroup>
 	  <None Remove="calibrate.ico" />
+	  <None Remove="Camera\LenticularParamFitter.cs.reference" />
 	</ItemGroup>
 
 	<ItemGroup>
