--- a/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
+++ b/Examples/HoloCaliberationDemo/HoloCaliberationDemo.csproj
@@ -41,6 +41,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
 		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
 		<PackageReference Include="System.Drawing.Common" Version="8.0.3" />
