--- a/libVRender/libVRender.vcxproj
+++ b/libVRender/libVRender.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="shaders\point_cloud_simple.h" />
     <ClInclude Include="shaders\shaders.h" />
     <ClInclude Include="skybox.hpp" />
+    <ClInclude Include="stat_viewer.hpp" />
     <ClInclude Include="utilities.h" />
   </ItemGroup>
   <ItemGroup>
