--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,4 @@ Directory.Build.props
 /Examples/Annotator/Chair/object_model
 /Examples/Annotator/KitchenPot/object_model
 /Examples/Annotator/Objects
+/.cursor
